--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -9,3 +9,4 @@ sybilla_masters_machine.jpg=@sybilla_masters_machine,0
 Sybilla Masters Device Drawing.jpg=@Sybilla Masters Device Drawing,0
 SMF logo jpeg2000 (1).jpg=@SMF logo jpeg2000 (1),0
 iStock-841843918 (edited-Pixlr).jpeg=@iStock-841843918 (edited-Pixlr),0
+accounting-achievement-aerial-1043506.jpg=@accounting-achievement-aerial-1043506,0
