--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -10,3 +10,5 @@ Sybilla Masters Device Drawing.jpg=@Sybilla Masters Device Drawing,0
 SMF logo jpeg2000 (1).jpg=@SMF logo jpeg2000 (1),0
 iStock-841843918 (edited-Pixlr).jpeg=@iStock-841843918 (edited-Pixlr),0
 accounting-achievement-aerial-1043506.jpg=@accounting-achievement-aerial-1043506,0
+SMF_logo.svg=@SMF_logo,0
+imageedit_1_4369588486.png=@imageedit_1_4369588486,0
