--- a/desktop.ini
+++ b/desktop.ini
@@ -12,3 +12,6 @@ iStock-841843918 (edited-Pixlr).jpeg=@iStock-841843918 (edited-Pixlr),0
 accounting-achievement-aerial-1043506.jpg=@accounting-achievement-aerial-1043506,0
 SMF_logo.svg=@SMF_logo,0
 imageedit_1_4369588486.png=@imageedit_1_4369588486,0
+advise (1).png=@advise (1),0
+investment.png=@investment,0
+review.png=@review,0
