--- a/desktop.ini
+++ b/desktop.ini
@@ -15,3 +15,8 @@ imageedit_1_4369588486.png=@imageedit_1_4369588486,0
 advise (1).png=@advise (1),0
 investment.png=@investment,0
 review.png=@review,0
+global-data.svg=@global-data,0
+money-bag.svg=@money-bag,0
+funding.svg=@funding,0
+balance.svg=@balance,0
+equity.svg=@equity,0
