--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -20,3 +20,5 @@ money-bag.svg=@money-bag,0
 funding.svg=@funding,0
 balance.svg=@balance,0
 equity.svg=@equity,0
+smftransparent.png=@smftransparent,0
+smflogo.svg=@smflogo,0
