--- a/desktop.ini
+++ b/desktop.ini
@@ -22,3 +22,4 @@ balance.svg=@balance,0
 equity.svg=@equity,0
 smftransparent.png=@smftransparent,0
 smflogo.svg=@smflogo,0
+main pictire website 2 (1).jpg=@main pictire website 2 (1),0
